docs/sf-export/sfdx-raw/objects/Inbound_API_Log__c/Inbound_API_Log__c.object-meta.xml
<CustomObject>
    <label>Inbound API Log</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Inbound API Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inbound API Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>