docs/sf-export/sfdx-raw/objects/Inbound_API_Log__c/fields/Application_Log__c.field-meta.xml
<CustomField>
    <fullName>Application_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Log</label>
    <referenceTo>Application_Log__c</referenceTo>
    <relationshipLabel>Inbound API Logs</relationshipLabel>
    <relationshipName>Inbound_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>