docs/sf-export/sfdx-raw/objects/Inbound_API_Log__c/fields/Draft__c.field-meta.xml
<CustomField>
    <fullName>Draft__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Draft</label>
    <referenceTo>Draft__c</referenceTo>
    <relationshipLabel>Inbound API Logs</relationshipLabel>
    <relationshipName>Inbound_API_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>