docs/sf-export/sfdx-raw/objects/Inbound_API_Log__c/fields/Request_Body__c.field-meta.xml
<CustomField>
    <fullName>Request_Body__c</fullName>
    <label>Request Body</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>