docs/sf-export/sfdx-raw/objects/Inbound_API_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <label>Response Body</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>